--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,47 @@ body{
 .foto{
     border-radius: 50%;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    text-align: center;
+    position: fixed;
 }
 
 .links{
     flex-grow: inherit;
     margin: 5px;
+}
+.carrousel{
+    margin: 0;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4% 8%;
+}
+.slides{
+    display: flex;
+    transition: 0.5s ease-in-out;
+}
+.slide{
+    min-width: 100%;
+    position: relative;
+}
+.slide img{
+    width: 100%;
+    height: 45%;
+    object-fit: cover;
+    display: block;
+}
+.legenda{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 15%;
+    text-align: center;
+}
+.btn{
+    position: absolute;
+    top: 50%;
+    translate: translateY(-50%);
+    background: rgba(255, 255, 255, );
 }
